@@ -26,6 +26,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Binary interpolation mode for transforms. Works like Bilinear, but tries to keep the opacity of pixels the same so that you can scale stuff drawn with a binary brush without making it all blurry. Thanks TGS for suggesting.
  * Fix: Properly reconnect to sessions when using an invite code, rather than asking for a password the second time around.
  * Fix: Properly reconnect when using a WebSocket URL, rather than replacing the path inappropriately.
+ * Fix: Don't incorrectly redo already gone undone commands after a series of undos and redos. Thanks Sinamer for reporting.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
